removed some width = vw from footer and that fixed the off center issue, links work, removed more button above projects to add back later when there are more projects

--- a/src/about/about.css
+++ b/src/about/about.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-  
+    padding: 8px;
     align-items: flex-start;
  
   }
