--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -14,7 +14,7 @@ footer {
   justify-content: center;
   align-items: center;
   /* padding: 42px; */
-  width: 100vw;
+  /* width: 100vw; */
   height: auto;
   margin-bottom: -10px;
 }
